--- a/index.html
+++ b/index.html
@@ -34,5 +34,36 @@
         <td>81</td>
       </tr>
     </table>
+    <br/>
+    <table border="1">
+    <tr>
+     <th></th>
+     <th></th>
+     <th>Bob</th>
+     <th>Alice</th>
+    </tr>
+    <tr>
+     <td rowspan="2">Favourite</td>
+     <td>color</td>
+     <td>Blue</td>
+     <td>Purple</td>
+    </tr>
+    <tr>     
+     <td>Flavour</td>
+     <td>Banana</td>
+     <td>Choclate</td>
+    </tr>
+    <tr>
+     <td rowspan="2">Least Favourite</td>
+     <td>color</td>
+     <td>Yellow</td>
+     <td>Pink</td>
+    </tr>
+    <tr>     
+     <td>Flavour</td>
+     <td>Mint</td>
+     <td>Walnut</td>
+    </tr>
+    </table>
   </body>
 </html>
