Table caption added and some typo fixed

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
     </table>
     <br/>
     <table border="1">
+     <caption>Favorite and Least Favorite Things</caption>
     <tr>
      <th></th>
      <th></th>
@@ -43,7 +44,7 @@
      <th>Alice</th>
     </tr>
     <tr>
-     <td rowspan="2">Favourite</td>
+     <td rowspan="2">Favorite</td>
      <td>color</td>
      <td>Blue</td>
      <td>Purple</td>
@@ -54,7 +55,7 @@
      <td>Choclate</td>
     </tr>
     <tr>
-     <td rowspan="2">Least Favourite</td>
+     <td rowspan="2">Least Favorite</td>
      <td>color</td>
      <td>Yellow</td>
      <td>Pink</td>
